@@ -302,7 +302,11 @@ Rules are now directly associated with a corresponding Language, and a can also 
 Rules can now be flagged with deprecated='true' in the RuleSet XML to allow the PMD Project to indicate a Rule (1) is scheduled for removal, (2) has been removed, or (3) has been renamed/moved.
 
 Other changes:
-
+Rule property API upgrades:
+  All numeric property descriptors can specify upper & lower limits
+  Newly functional Method & Type descriptors allow rule developers to incorporate/watch for individual methods or types
+  Better initialization error detection
+  Deprecated old string-keyed property API, will leave some methods behind for XPath rules however
 '41' and '42' shortcuts for rulesets added
 The default Java version processed by PMD is now uniformly Java 1.5.
 RuleViolations in Reports now uses List internally, and RuleViolationComparator is no longer broken
